Completed contact icons, collapsable navbar, fixed course img

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ header {
     padding: 0px; /* Remove Bootstrap padding*/
 }
 
-.col-sm-6, .col-lg-3, .col-lg-4, .col-lg-8 {
+.col-sm-6, .col-lg-3, .col-lg-4, .col-lg-8, .col-sm-4, .col-sm-8 {
     padding-bottom: 50px; /* Add padding to Bootstrap columns */
 }
 
@@ -79,8 +79,9 @@ header {
 }
 
 #courses img {
-    max-width: 400px;
-    height: auto;
+    /*width: auto;*/
+    /*max-width: 400px;*/
+    /*height: auto;*/
     border: 1px solid lightgray;
 }
 
@@ -88,26 +89,13 @@ header {
     height: 100%;
 }
 
+/* Arrow navigation in header */
 .fa-chevron-down::before {
     color: white;
 }
 
- /* Vertically center elements when font size increases */
-a.nav-link {
-    position: relative!important;
-    top: 50%!important;
-    transform: translateY(-50%)!important;
-    transition-duration: .2s!important;
-}
-
-/* Style active navbar item */
-a.nav-link.active {
-    /*color: darkmagenta!important;*/
-    font-size: 20pt!important;
-}
-
-/* Disable default anchor behavior on stack icons */
-#stack a.icon-anchor {
+/* Disable default anchor behavior on icons */
+a.icon-anchor {
     text-decoration: none;
     color: currentColor;
 }
@@ -142,3 +130,21 @@ a.nav-link.active {
     width: 100%!important;
     max-width: 350px!important;
 }
+
+/* Contact anchor icons */
+#contact a {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+/* Contact icons */
+#contact i {
+    font-size: 30pt;
+    transition: .5s ease;
+}
+
+/* Contact icon hover */
+#contact i:hover {
+    color: white;
+}
+
